fixed responsiveness and alignment

--- a/app/assets/stylesheets/properties_form.scss
+++ b/app/assets/stylesheets/properties_form.scss
@@ -11,6 +11,7 @@
 .confirmed-logo{
 	width: 5.556rem;
 }
+
 .confirm-b {
 	margin-left: 5em;
 }
@@ -35,13 +36,19 @@ div.confirmed-columns{
   padding-right: 18em;
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 768px){
 	div.confirmed-columns {
-		padding-left: 0;
-		padding-right: 0;
+		padding-left: 0.5em;
+		padding-right: 0.5em;
+		font-size: 0.5em;
+
 	}
 	.confirm-b .button{
 		margin-left:auto;
-		width: auto;
+		width: 100%;
+
+	}
+	.confirmed-logo {
+		width:5rem;
 	}
 }
