--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -78,6 +78,12 @@
     width: 10em;
   }
 
+  .tabs-title a {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+  }
+
   .tabs-title:hover {
     box-sizing: border-box;
     box-shadow: 1px 1px 10px whitesmoke;
@@ -110,9 +116,13 @@
   @media screen and (max-width:900px){
     .x li {
     padding-top: auto;
-    width: auto;
+    width: 7em;
     height: auto;
     border: none;
+    }
+
+    .title-icons {
+      width: 2rem;
     }
   }
 }
